--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,17 +4,17 @@
   "version": "1.0",
   "description": "parents.codmon.com で動作する画像のダウンローダーです",
   "icons": {
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "browser_action": {
-    "default_icon": "icon48.png"
+    "default_icon": "icons/icon48.png"
   },
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["activeTab", "tabs", "storage"],
+  "permissions": ["activeTab", "tabs", "storage", "downloads"],
   "content_scripts": [
     {
       "matches": ["*://parents.codmon.com/*"],
