--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Codmon Image Downloader",
-  "version": "1.0.0",
-  "description": "parents.codmon.com で動作する画像のダウンローダーです",
+  "name": "",
+  "version": "",
+  "description": "",
   "icons": {
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
