--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "parents.codmon.com で動作する画像のダウンローダーです",
   "scripts": {
     "build": "webpack",
-    "release": "mkdir -p releases && zip -r releases/codmon-image-downloader-v$npm_package_version.zip dist"
+    "package": "mkdir -p releases && zip -r releases/codmon-image-downloader-v$npm_package_version.zip dist",
+    "pre-release": "git fetch && git diff --exit-code origin/main",
+    "release": "yarn pre-release && yarn build && yarn zip && yarn release:gh",
+    "release:gh": "gh release create v$npm_package_version releases/codmon-image-downloader-v$npm_package_version.zip -t \"Release v$npm_package_version\" -n \"$(git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:'%h - %s%n')\""
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
