--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules
 releases
+
+# yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
