--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.1"
+  },
+  "volta": {
+    "node": "18.16.0"
   }
 }
